--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="profileTextViews">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_margin">@dimen/small_margin</item>
+
+    </style>
+
+    <style name="mainButtonsStyle">
+        <item name="android:background">@drawable/rounded_corners</item>
+        <item name="android:padding">8dp</item>
+
+
+    </style>
+
 </resources>
